--- a/public/css/style.css
+++ b/public/css/style.css
@@ -337,8 +337,13 @@ ol {
 	position: absolute;
 	left: 0;
 	top: 0;
-	width: 100%;
+	width: 100%; 	
+	display: block;
+	
+	
 }
+
+
 
 .header.header--normal {
 	position: relative;
@@ -1759,3 +1764,166 @@ Responsive Media Quaries
   from {opacity: .4}
   to {opacity: 1}
 } */  
+
+/*---------------------
+  Faq
+-----------------------*/
+
+.faq {
+	padding-top: 70px;
+}
+
+.faq__accordion .section-title {
+	margin-bottom: 34px;
+}
+
+.faq__accordion .section-title h2 {
+	font-size: 32px;
+}
+
+.faq__accordion .card {
+	border: none;
+	border-radius: 0;
+	margin-bottom: 36px;
+}
+
+.faq__accordion .card:last-child {
+	margin-bottom: 0;
+}
+
+.faq__accordion .card-heading {
+	cursor: pointer;
+}
+
+.faq__accordion .card-heading a {
+	font-size: 18px;
+	color: #111111;
+	font-weight: 700;
+	line-height: 24px;
+	display: block;
+	padding-left: 30px;
+}
+
+.faq__accordion .card:last-child .card-heading {
+	border-bottom: none;
+}
+
+.faq__accordion .card .card-body {
+	padding: 0;
+	padding-left: 30px;
+	padding-top: 14px;
+}
+
+.faq__accordion .card .card-body p {
+	font-size: 14px;
+	color: #444444;
+	line-height: 24px;
+	margin-bottom: 0;
+}
+
+.faq__accordion .card-heading a:after,
+.faq__accordion .card-heading>a.active[aria-expanded=false]:after {
+	content: "+";
+	font-size: 24px;
+	color: #f3bd00;
+	position: absolute;
+	left: 0;
+	top: -1px;
+}
+
+.faq__accordion .card-heading.active a:after {
+	content: "-";
+	font-size: 24px;
+	color: #f3bd00;
+	position: absolute;
+	left: 0;
+	top: -3px;
+}
+
+.faq__accordion .card-heading a[aria-expanded=true]:after,
+.faq__accordion .card-heading>a.active:after {
+	content: "-";
+	font-size: 32px;
+	font-weight: 400;
+	color: #f3bd00;
+	position: absolute;
+	right: 0;
+	top: -3px;
+}
+
+.faq__form .section-title {
+	margin-bottom: 34px;
+}
+
+.faq__form .section-title h2 {
+	font-size: 32px;
+}
+
+.faq__form form input {
+	width: 100%;
+	height: 50px;
+	border: 1px solid #e1e1e1;
+	background: #ffffff;
+	font-size: 14px;
+	color: #444444;
+	padding-left: 20px;
+	margin-bottom: 20px;
+}
+
+.faq__form form input::-webkit-input-placeholder {
+	color: #444444;
+}
+
+.faq__form form input::-moz-placeholder {
+	color: #444444;
+}
+
+.faq__form form input:-ms-input-placeholder {
+	color: #444444;
+}
+
+.faq__form form input::-ms-input-placeholder {
+	color: #444444;
+}
+
+.faq__form form input::placeholder {
+	color: #444444;
+}
+
+.faq__form form textarea {
+	width: 100%;
+	height: 110px;
+	border: 1px solid #e1e1e1;
+	background: #ffffff;
+	font-size: 14px;
+	color: #444444;
+	padding-top: 12px;
+	padding-left: 20px;
+	margin-bottom: 14px;
+	resize: none;
+}
+
+.faq__form form textarea::-webkit-input-placeholder {
+	color: #444444;
+}
+
+.faq__form form textarea::-moz-placeholder {
+	color: #444444;
+}
+
+.faq__form form textarea:-ms-input-placeholder {
+	color: #444444;
+}
+
+.faq__form form textarea::-ms-input-placeholder {
+	color: #444444;
+}
+
+.faq__form form textarea::placeholder {
+	color: #444444;
+}
+
+.faq__form form button {
+	width: 100%;
+}
+
